--- a/package.json
+++ b/package.json
@@ -6,17 +6,23 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
     "dev": "nodemon app.js"
-    
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@sqlitecloud/drivers": "^1.0.507",
+    "bootstrap": "^5.3.6",
+    "cors": "^2.8.5",
     "csv-parser": "^3.2.0",
-    "express": "^5.1.0"
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "path": "^0.12.7",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
+    "cypress": "^14.4.1",
     "nodemon": "^3.1.10"
   }
 }
